--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -333,7 +333,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           disable_search: true
-          file: coverage.info
+          files: coverage.info
           name: Github Actions
           token: ${{secrets.CODECOV_TOKEN}}
           verbose: true
@@ -453,7 +453,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           disable_search: true
-          file: __out/cobertura.xml
+          files: __out/cobertura.xml
           name: Github Actions
           token: ${{secrets.CODECOV_TOKEN}}
           verbose: true
