Update coverage step
- Use new "collect" argument
- Fail CI on error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -324,14 +324,13 @@ jobs:
 
       - name: Collect coverage
         if: matrix.coverage
-        run: ci/codecov.sh "upload"
-        env:
-          BOOST_CI_CODECOV_IO_UPLOAD: skip
+        run: ci/codecov.sh "collect"
 
       - name: Upload coverage
         if: matrix.coverage
         uses: codecov/codecov-action@v5
         with:
+          fail_ci_if_error: true
           disable_search: true
           files: coverage.info
           name: Github Actions
