GHA: Show output of all runs of binaries in test folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -317,7 +317,7 @@ jobs:
       - name: Test output
         if: '!matrix.coverity && always()'
         run: |
-          for f in $(find "$BOOST_ROOT/bin.v2/libs/$SELF/test" -type f -name 'test_*.run'); do
+          for f in $(find "$BOOST_ROOT/bin.v2/libs/$SELF/test" -type f -name '*.run'); do
               name=$(basename "$f")
               name=${name%.run}
               config=$(dirname "$f")
