--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -64,10 +64,16 @@ environment:
       # The VS2017 image has some issues which we workaround, so collect coverage for that.
       COVERAGE: true
 
-    - FLAVOR: Visual Studio 2019
+    - FLAVOR: Visual Studio 2019 C++ 14/17
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       B2_CXXFLAGS: -permissive-
-      B2_CXXSTD: 14,17,2a
+      B2_CXXSTD: 14,17
+      B2_TOOLSET: msvc-14.2
+
+    - FLAVOR: Visual Studio 2019 C++ 2a
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      B2_CXXFLAGS: -permissive-
+      B2_CXXSTD: 2a
       B2_TOOLSET: msvc-14.2
 
     - FLAVOR: Visual Studio 2022 C++ 14/17
