--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,10 +13,23 @@ branches:
   only:
     - master
     - develop
+    - /appveyor\/.*/
     - /bugfix\/.*/
     - /feature\/.*/
     - /fix\/.*/
     - /pr\/.*/
+
+skip_commits:
+  files:
+    - .drone.star
+    - .github/workflows/*
+    - .travis.yml
+    - azure-pipelines/*
+    - drone/*
+    - travis/*
+    - LICENSE
+    - meta/*
+    - README.md
 
 matrix:
   fast_finish: false
